# Smart-MultiAgent-Platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  SYSTEMIC_BUG_AUDIT_2026-05-21.md  package.json  pnpm-lock.yaml
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.dockerignore  README.md  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0000_baseline.py  0001_identity.py  0002_tenancy.py  0003_invites.py  0004_audit.py  0005_api_keys.py  0006_key_projects.py  0007_key_groups.py  0008_key_usage_events.py  0009_search_keys.py  0010_rewrap_progress.py  0011_agents.py  0012_rag.py  0013_graphrag.py  0014_mcp.py  0015_workspaces.py  0016_chatrooms.py  0017_messages.py  0018_attachments_chatroom.py  0019_wakeup_authored_snapshot.py  0020_approvals.py  0021_instructions.py  0022_agent_instances.py  0023_workflows.py  0024_workflow_runs_steps.py  0025_notifications.py  0026_impersonation_access_jti.py  0027_audit_retention_grant.py  0028_notification_dedup_key.py  0029_version_bump_triggers.py  0030_agent_model_id.py  0031_guest_display_name.py  0032_audit_retention_delete_grant.py  0033_user_display_name.py  0034_messages_sender_index.py  0035_rag_document_agent_scope.py  0036_agent_tools.py  0037_drop_agent_mcp_servers.py  0038_agent_workspace_files.py  0039_agent_effort.py  (+1 more)
backend/app/: __init__.py  db_registry.py  main.py
backend/app/api/: __init__.py
backend/app/api/middleware/: auth.py  body_size.py  impersonation.py  ip_ban.py  rate_limit.py  request_id.py  security_headers.py  trusted_proxy.py
backend/app/api/v1/: __init__.py  admin.py  admin_audit.py  admin_deps.py  admin_impersonation.py  admin_ip_bans.py  admin_metrics.py  admin_orgs.py  admin_projects.py  admin_rate_limits.py  admin_users.py  agent_workspace.py  agents.py  attachments.py  auth.py  chatrooms.py  csp_report.py  deps.py  exports.py  graphrag.py  guests.py  healthz.py  invites.py  key_groups.py  keys.py  mcp.py  messages.py  metrics.py  model_catalog.py  notifications.py  orchestration.py  orgs.py  project_keys.py  projects.py  rag.py  readyz.py  search.py  search_keys.py  tus.py  workflows.py  (+1 more)
backend/app/api/ws/: __init__.py  admin_tail.py  chatroom.py  graphrag.py  rag_configs.py  user.py  workflow_runs.py
backend/app/bootstrap/: seed.py  startup.py
backend/app/config/: __init__.py  settings.py
backend/app/workers/: agent_fs_gc.py  graphrag_reconciler.py  main.py
backend/app/workers/tasks/: __init__.py  advisory.py  approvals.py  conversation.py  graphrag.py  orchestration.py  rag.py  retention.py  workflow.py  workflow_approvals.py  workflow_common.py  workflow_cron.py  workflow_signals.py  workflow_steps.py  workflow_watchdog.py
backend/contexts/: README.md
backend/scripts/: export_openapi.py
backend/services/: __init__.py
backend/services/egress_proxy/: Dockerfile  README.md  __init__.py  app.py  config.py  ip_policy.py  main.py
backend/services/mcp_supervisor/: Dockerfile  __init__.py  main.py
backend/shared_kernel/: audit.py  queue.py  scanning.py  validation.py
backend/shared_kernel/auth/: captcha.py  clients.py  context.py  dependencies.py  ip_bans.py  jwt.py  password.py  permissions.py  ratelimit.py  tokens.py  trusted_proxy.py
backend/shared_kernel/db/: __init__.py  registry.py  session.py
backend/shared_kernel/errors/: __init__.py  context_handler.py  handlers.py  problem.py  registry.py
backend/shared_kernel/events/: key_revocation.py
backend/shared_kernel/infra/: redis_buckets.py  vault.py
backend/shared_kernel/logging/: __init__.py  context.py  redaction.py  setup.py
backend/shared_kernel/markdown/: __init__.py  sanitize.py
backend/shared_kernel/observability/: __init__.py  metrics.py  otel.py
backend/shared_kernel/realtime/: __init__.py  connection.py  distributed_lock.py  presence.py  pubsub.py  turn_lock.py  ws_auth.py
backend/shared_kernel/security/: __init__.py  envelope.py
backend/shared_kernel/storage/: __init__.py  minio_client.py  sanitize.py
backend/shared_kernel/text_extraction/: __init__.py  parsers.py
backend/smap/: __init__.py
backend/smap/bootstrap/: __init__.py  __main__.py  _common.py  create_admin.py  db_init.py  minio_init.py  neo4j_init.py  qdrant_init.py  vault_approle.py  vault_init.py
backend/smap/rotation/: __init__.py  __main__.py  rotate_transit.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_login_refresh.py  test_auth_middleware_failure_paths.py  test_csp_report.py  test_ip_ban_cache.py  test_password_policy.py  test_permission_matrix.py  test_ratelimit_bucket_mapping.py  test_security_headers.py  test_trusted_proxy_boundary.py  test_worker_tasks.py
backend/tests/unit/: test_a2a_call_chain.py  test_a2a_idempotency.py  test_a2a_reply_spoof.py  test_a2a_scope.py  test_a2a_turn_dispatch.py  test_a2a_workflow_tenant.py  test_agent_config_project_guard.py  test_agent_runtime_tools.py  test_agent_runtime_transcript.py  test_agent_service.py  test_agent_trigger_wiring.py  test_agent_turn_loop.py  test_approval_gate_fixes.py  test_approval_majority.py  test_attachment_download_disposition.py  test_attachment_extraction_task.py  test_audit_notification_services.py  test_auth_service.py  test_auth_token_pair_out.py  test_builtin_tools_wiring.py  test_captcha_verify.py  test_carry_projects_for_key.py  test_chat_export_service.py  test_chunkers.py  test_clamav_scanner.py  test_code_exec_kernel.py  test_code_exec_tool.py  test_compose_network_isolation.py  test_context_compaction.py  test_conversation_facade.py  test_conversation_services.py  test_egress_allowlist.py  test_egress_client.py  test_egress_ip_policy.py  test_email_k6.py  test_envelope_security.py  test_errors.py  test_executor_registry_tripwire.py  test_file_tool.py  test_function_probe.py  (+56 more)
backend/tests/wiring/: conftest.py  test_account_self_delete.py  test_rag_ingestion.py  test_wiring.py
(+982 files in other folders)
