[project]
name = "smap-backend"
version = "0.0.0"
description = "SMAP backend — FastAPI + DDD bounded contexts."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

# Runtime pins per docs/implement/A-foundations.md §A.2.
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "pydantic==2.9.*",
  "pydantic-settings==2.6.*",
  "sqlalchemy[asyncio]==2.0.*",
  "asyncpg==0.30.*",
  "alembic==1.13.*",
  "arq==0.26.*",
  "loguru==0.7.*",
  "argon2-cffi>=23.1,<25.2",
  "httpx==0.27.*",
  "bleach==6.2.*",
  "markdown-it-py==3.0.*",
  "google-re2==1.1.*",
  "hvac==2.3.*",
  "redis==5.2.*",
  "python-multipart==0.0.26",
  "orjson==3.10.*",
  "cryptography==43.0.*",
  "psycopg[binary]==3.2.*",
  "minio==7.2.*",
  "neo4j==5.24.*",
  "qdrant-client==1.12.*",
  "prometheus-client==0.21.*",
  "typer==0.12.*",
  "docker==7.1.*",
]

[project.optional-dependencies]
otel = [
  "opentelemetry-sdk==1.27.*",
  "opentelemetry-exporter-otlp-proto-http==1.27.*",
  "opentelemetry-instrumentation-fastapi==0.48b0",
  "opentelemetry-instrumentation-sqlalchemy==0.48b0",
  "opentelemetry-instrumentation-httpx==0.48b0",
]
dev = [
  "ruff==0.7.*",
  "mypy==1.13.*",
  "import-linter==2.1.*",
  "pytest==8.3.*",
  "pytest-asyncio==0.24.*",
  "pytest-cov==5.0.*",
  "respx==0.21.*",
  "types-bleach",
  "types-redis",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "contexts*", "shared_kernel*", "smap*"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "N",              # pep8-naming
  "S",              # flake8-bandit
  "A",              # flake8-builtins
  "C4",             # flake8-comprehensions
  "PT",             # pytest style
  "RET",            # flake8-return
  "SIM",            # flake8-simplify
  "TID",            # flake8-tidy-imports
  "PL",             # pylint subset
  "RUF",
]
ignore = [
  "S101",   # allow assert in tests
  "PLR0913", # many-argument functions are fine for FastAPI deps
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "PLR"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app", "contexts", "shared_kernel", "smap"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = false           # default relaxed; strict on selected packages below
plugins = ["pydantic.mypy"]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = false

# Strict zones — domain purity enforced per REQUIREMENTS.md §23.
[[tool.mypy.overrides]]
module = [
  "contexts.*.domain.*",
  "shared_kernel.*",
]
strict = true
disallow_any_explicit = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Relaxed zones — 3rd-party stubs.
[[tool.mypy.overrides]]
module = [
  "hvac.*",
  "arq.*",
  "google.re2.*",
  "minio.*",
  "neo4j.*",
  "qdrant_client.*",
  "prometheus_client.*",
  "opentelemetry.*",
]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: fast, isolated unit tests",
  "integration: requires infra (DB/Redis/Vault/etc.) — skipped in fmt/lint CI",
  "e2e: full-stack tests; Playwright or compose.test.yml",
]

# ---------- Import-linter (SoC enforcement — §23 DDD boundaries) ----------
# Rules operationalise the construction plan: no cross-context SQL joins, no
# domain-in-router coupling, no framework code in domain layer.
[tool.importlinter]
root_packages = ["app", "contexts", "shared_kernel"]

[[tool.importlinter.contracts]]
name = "Layered DDD — domain must not depend on application/infrastructure/interfaces"
type = "layers"
# Multi-container layers: `layers` names sub-modules *within* each container.
layers = [
  "interfaces",
  "application",
  "infrastructure",
  "domain",
]
containers = [
  "contexts.identity",
  "contexts.tenancy",
  "contexts.keys",
  "contexts.agents",
  "contexts.knowledge",
  "contexts.conversation",
  "contexts.orchestration",
  "contexts.workflow",
  "contexts.audit",
  "contexts.notification",
]
exhaustive = false

[[tool.importlinter.contracts]]
name = "Contexts are independent — no cross-context imports"
type = "independence"
modules = [
  "contexts.identity",
  "contexts.tenancy",
  "contexts.keys",
  "contexts.agents",
  "contexts.knowledge",
  "contexts.conversation",
  "contexts.orchestration",
  "contexts.workflow",
  "contexts.audit",
  "contexts.notification",
]
# Allowed facade imports (interfaces layer is the public API between contexts).
ignore_imports = [
  "contexts.orchestration.application.a2a_service -> contexts.agents.application.a2a_scope",
  "contexts.orchestration.application.a2a_service -> contexts.agents.domain.models",
  "contexts.orchestration.application.a2a_service -> contexts.agents.interfaces.facade",
  "contexts.orchestration.application.wakeup_service -> contexts.agents.application.agent_service",
  "contexts.orchestration.application.wakeup_service -> contexts.agents.domain.models",
  "contexts.orchestration.application.wakeup_service -> contexts.agents.interfaces.facade",
  "contexts.orchestration.interfaces.facade -> contexts.orchestration.application.a2a_service",
  "contexts.orchestration.interfaces.facade -> contexts.orchestration.application.wakeup_service",
  "contexts.conversation.application.access -> contexts.tenancy.infrastructure.repositories",
  "contexts.conversation.application.access -> contexts.tenancy.interfaces.role_resolver",
]

[[tool.importlinter.contracts]]
name = "Routers call interfaces facades only — not domain/infrastructure directly"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = [
  "contexts.identity.domain", "contexts.identity.infrastructure",
  "contexts.tenancy.domain", "contexts.tenancy.infrastructure",
  "contexts.keys.domain", "contexts.keys.infrastructure",
  "contexts.agents.domain", "contexts.agents.infrastructure",
  "contexts.knowledge.domain", "contexts.knowledge.infrastructure",
  "contexts.conversation.domain", "contexts.conversation.infrastructure",
  "contexts.orchestration.domain", "contexts.orchestration.infrastructure",
  "contexts.workflow.domain", "contexts.workflow.infrastructure",
  "contexts.audit.domain", "contexts.audit.infrastructure",
  "contexts.notification.domain", "contexts.notification.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Domain is framework-free — no FastAPI / SQLAlchemy / HTTPX in domain"
type = "forbidden"
source_modules = [
  "contexts.identity.domain",
  "contexts.tenancy.domain",
  "contexts.keys.domain",
  "contexts.agents.domain",
  "contexts.knowledge.domain",
  "contexts.conversation.domain",
  "contexts.workflow.domain",
  "contexts.orchestration.domain",
  "contexts.audit.domain",
  "contexts.notification.domain",
]
forbidden_modules = [
  "fastapi",
  "sqlalchemy",
  "httpx",
  "redis",
  "hvac",
  "arq",
  "minio",
  "neo4j",
  "qdrant_client",
  "prometheus_client",
]
