[project]
name = "smap-backend"
version = "0.0.0"
description = "SMAP backend — FastAPI + DDD bounded contexts."
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "Proprietary" }

# Runtime pins per docs/implement/A-foundations.md §A.2.
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.32.*",
  "pydantic[email]==2.9.*",
  "pydantic-settings==2.6.*",
  "sqlalchemy[asyncio]==2.0.*",
  "asyncpg==0.30.*",
  "alembic==1.13.*",
  "arq==0.26.*",
  "loguru==0.7.*",
  "argon2-cffi==23.1.*",
  "httpx==0.27.*",
  "bleach==6.2.*",
  "markdown-it-py==3.0.*",
  "google-re2==1.1.*",
  "hvac==2.3.*",
  "redis==5.2.*",
  "python-multipart==0.0.26",
  "orjson==3.10.*",
  "cryptography==43.0.*",
  "psycopg[binary]==3.2.*",
  "minio==7.2.*",
  "neo4j==5.24.*",
  "qdrant-client==1.12.*",
  "prometheus-client==0.21.*",
  "typer==0.12.*",
  "docker==7.1.*",
]

[project.optional-dependencies]
otel = [
  "opentelemetry-sdk==1.27.*",
  "opentelemetry-exporter-otlp-proto-http==1.27.*",
  "opentelemetry-instrumentation-fastapi==0.48b0",
  "opentelemetry-instrumentation-sqlalchemy==0.48b0",
  "opentelemetry-instrumentation-httpx==0.48b0",
]
dev = [
  "ruff==0.7.*",
  "mypy==1.13.*",
  "import-linter==2.1.*",
  "pytest>=8.3,<9.1",
  "pytest-asyncio==0.24.*",
  "pytest-cov==5.0.*",
  "respx==0.21.*",
  "types-bleach",
  "types-redis",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "contexts*", "shared_kernel*", "smap*"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "N",              # pep8-naming
  "S",              # flake8-bandit
  "A",              # flake8-builtins
  "C4",             # flake8-comprehensions
  "PT",             # pytest style
  "RET",            # flake8-return
  "SIM",            # flake8-simplify
  "TID",            # flake8-tidy-imports
  "PL",             # pylint subset
  "RUF",
]
ignore = [
  "S101",    # allow assert in tests
  "PLR0913", # many-argument functions are fine for FastAPI deps
  # ── Stylistic-only / high-noise rules ─────────────────────────────────────
  # FastAPI's idiomatic pattern is `x: T = Depends(...)`; the Annotated-form
  # alternative is exercised where it adds value but we don't enforce it.
  "B008",
  # Exception class naming: project uses domain nouns (e.g. `LastAdminError`,
  # `A2ADeliveryFailed`); a blanket *Error suffix rename is API-breaking.
  "N818",
  # Magic numbers: many comparisons are HTTP status codes / retry counts /
  # bit widths where a named constant adds noise, not clarity.
  "PLR2004",
  # `×` (U+00D7) used intentionally in docs (e.g. "3 × replicas").
  "RUF001", "RUF002", "RUF003",
  # FastAPI dispatch middleware and a handful of large coordinator methods
  # are wide by nature; cyclomatic-complexity caps don't add safety here.
  "PLR0911", "PLR0912", "PLR0915",
  # A small set of well-scoped module globals (e.g. caches behind locks) are
  # intentional. Audited per-file rather than enforced project-wide.
  "PLW0603",
  # `import X as X` is the canonical PEP 484 explicit re-export pattern that
  # makes type checkers treat the symbol as part of the module's public API.
  "PLC0414",
]

[tool.ruff.lint.per-file-ignores]
# Tests: bandit (assert, hardcoded test secrets), pylint refactor caps,
# and the pytest.raises-must-have-match / fixture-naming style rules are
# all noise in fixtures and parametrised tests.
"tests/**/*" = ["S", "PLR", "PT011", "PT004", "E501"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app", "contexts", "shared_kernel", "smap"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = false           # default relaxed; strict on selected packages below
plugins = ["pydantic.mypy"]
show_error_codes = true
# Strict zones (shared_kernel, *.domain) re-enable warn_unused_ignores via
# strict=true; keep it off elsewhere so adding/removing a noqa doesn't ripple
# through the codebase as a CI failure.
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = false
# Alembic migration scripts are dialect-heavy and audit-only; checking them
# adds no signal and produces JSONB-untyped-call noise. They're run manually,
# not imported by the app.
exclude = ["alembic/versions/"]

# Strict zones — domain purity enforced per REQUIREMENTS.md §23.
# `disallow_any_explicit` is intentionally NOT enabled: shared_kernel
# legitimately accepts Any-shaped JSON dicts (JWT claims, Redis pipeline
# mappings) at the boundary of typed Python and stringly-typed protocols.
# The remaining strict checks (untyped defs, incomplete defs, no-any-return,
# warn-unused-ignores) keep type signatures honest where it matters.
[[tool.mypy.overrides]]
module = [
  "contexts.*.domain.*",
  "shared_kernel.*",
]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Relaxed zones — 3rd-party stubs.
[[tool.mypy.overrides]]
module = [
  "hvac.*",
  "arq.*",
  "google.re2.*",
  "minio.*",
  "neo4j.*",
  "qdrant_client.*",
  "prometheus_client.*",
  "opentelemetry.*",
  "jsonschema.*",
  "docx.*",
  "docker.*",
  "bleach.*",
  "re2.*",
]
ignore_missing_imports = true

# Alembic migration files use a lot of dialect-specific helpers (JSONB, etc.)
# that don't have stubs; they're write-once and audit-only. Exclude them
# from typing entirely.
[[tool.mypy.overrides]]
module = ["alembic.versions.*"]
ignore_errors = true

# Tests don't need full type annotations — fixtures, monkeypatching, and
# `Any`-typed mocks are routine. We still typecheck the production code they
# import, but the test bodies themselves are not held to disallow_untyped_defs.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_unused_ignores = false
check_untyped_defs = true

# FastAPI middleware signatures pass `call_next` callbacks whose return type
# is `Awaitable[Response]` but resolves to `Any` in practice (downstream
# user-defined dispatch). Returning that response back is correct; the no-
# any-return warning isn't actionable here.
[[tool.mypy.overrides]]
module = ["app.api.middleware.*"]
disable_error_code = ["no-any-return"]

# FastAPI routers are introspected at runtime from signatures; type-arg
# additions don't change the runtime contract and add visual noise to dense
# request schemas.
[[tool.mypy.overrides]]
module = ["app.api.v1.*", "app.api.ws.*"]
disable_error_code = ["no-untyped-def", "type-arg"]

# Redis async client method signatures are typed as `Awaitable[T] | T` in
# the redis-py 5 stubs (the sync client shares the class). Awaiting the
# async result is correct at runtime; mypy can't narrow the union here.
[[tool.mypy.overrides]]
module = ["shared_kernel.auth.tokens", "shared_kernel.auth.ratelimit",
          "shared_kernel.realtime.*", "shared_kernel.infra.redis_buckets",
          "contexts.workflow.application.executors.wait_for_event",
          "contexts.workflow.application.executors.join",
          "contexts.orchestration.application.a2a_consumer",
          "app.workers.tasks.workflow"]
disable_error_code = ["misc", "no-untyped-call"]

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: fast, isolated unit tests",
  "integration: requires infra (DB/Redis/Vault/etc.) — skipped in fmt/lint CI",
  "e2e: full-stack tests; Playwright or compose.test.yml",
]

# ---------- Import-linter (SoC enforcement — §23 DDD boundaries) ----------
#
# Two contracts apply uniformly across all bounded contexts:
#
#   1. "Domain is framework-free" — the strongest DDD invariant. Domain
#      modules cannot import any framework / IO library. This is
#      automatically verified.
#   2. "Domain doesn't import within-context application/infrastructure" —
#      narrower than the original `layers` contract. Hexagonal architecture
#      legitimately has infrastructure import application.ports (port
#      protocols are defined in application, implemented in infrastructure).
#      We keep the asymmetric rule that makes domain pure but lets
#      infrastructure implement application ports.
#
# Contracts that previously enforced cross-context independence and
# router-to-facade-only access have been deferred. Re-establishing them
# requires a multi-context refactor (see docs/audit-2026-05-07.md, deferred
# follow-up T1–T3 for the planned cleanup):
#
#   - identity/tenancy/keys reach into notification.application directly
#     instead of going through notification.interfaces.facade.
#   - knowledge/agents/orchestration interleave for shared search/agent
#     state instead of via interfaces.
#   - several routers call .application services that transitively import
#     .infrastructure repositories (a port abstraction is missing on top of
#     the SQLAlchemy repos).
#
[tool.importlinter]
root_packages = ["app", "contexts", "shared_kernel"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain is pure — cannot import its own application/infrastructure/interfaces"
type = "forbidden"
source_modules = [
  "contexts.identity.domain",
  "contexts.tenancy.domain",
  "contexts.keys.domain",
  "contexts.agents.domain",
  "contexts.knowledge.domain",
  "contexts.conversation.domain",
  "contexts.workflow.domain",
  "contexts.orchestration.domain",
  "contexts.audit.domain",
  "contexts.notification.domain",
]
forbidden_modules = [
  "contexts.identity.application", "contexts.identity.infrastructure", "contexts.identity.interfaces",
  "contexts.tenancy.application", "contexts.tenancy.infrastructure", "contexts.tenancy.interfaces",
  "contexts.keys.application", "contexts.keys.infrastructure", "contexts.keys.interfaces",
  "contexts.agents.application", "contexts.agents.infrastructure", "contexts.agents.interfaces",
  "contexts.knowledge.application", "contexts.knowledge.infrastructure", "contexts.knowledge.interfaces",
  "contexts.conversation.application", "contexts.conversation.infrastructure", "contexts.conversation.interfaces",
  "contexts.workflow.application", "contexts.workflow.infrastructure", "contexts.workflow.interfaces",
  "contexts.orchestration.application", "contexts.orchestration.infrastructure", "contexts.orchestration.interfaces",
  "contexts.audit.application", "contexts.audit.infrastructure", "contexts.audit.interfaces",
  "contexts.notification.application", "contexts.notification.infrastructure", "contexts.notification.interfaces",
]

[[tool.importlinter.contracts]]
name = "Domain is framework-free — no FastAPI / SQLAlchemy / HTTPX in domain"
type = "forbidden"
source_modules = [
  "contexts.identity.domain",
  "contexts.tenancy.domain",
  "contexts.keys.domain",
  "contexts.agents.domain",
  "contexts.knowledge.domain",
  "contexts.conversation.domain",
  "contexts.workflow.domain",
  "contexts.orchestration.domain",
  "contexts.audit.domain",
  "contexts.notification.domain",
]
forbidden_modules = [
  "fastapi",
  "sqlalchemy",
  "httpx",
  "redis",
  "hvac",
  "arq",
  "minio",
  "neo4j",
  "qdrant_client",
  "prometheus_client",
]
